# proof_of_work

./: LICENSE.txt  README.md  api.py  block.py  blockchain.py  create_linux_binaries.txt  database.py  decoder.py  formatter.py  gui.py  headers.py  linux_binaries.txt  miner.py  node.py  pyproject.toml  requirements.txt  setup.py  timestamp.py  transactions.py  utxo.py  wallet.py
.github/workflows/: main.yml
bbpow/: api.py  block.py  blockchain.py  database.py  decoder.py  gui.py  headers.py  miner.py  node.py  transactions.py  utxo.py  wallet.py
src/bb_pow/: block.py  blockchain.py  database.py  decoder.py  formatter.py  miner.py  node.py  signature.py  transactions.py  utxo.py  wallet.py
src/bb_pow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bb_pow/components/: api.py  blockchain.py  gui.py  miner.py  node.py  wallet.py  wsgi.py
src/bb_pow/data_format/: database.py  decoder.py  formatter.py  timestamp.py
src/bb_pow/data_structures/: block.py  transactions.py  utxo.py
static/styles/: style.css
templates/: index.html
tests/: context.py  helpers.py  test_api.py  test_block.py  test_blockchain.py  test_database.py  test_formatter.py  test_header.py  test_node.py  test_transaction.py  test_utxo.py  test_wallet.py
tests/data/test_database/: test_headers.db
